--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: P2PU Hogwarts
-description: P2PU learning circle team template
-language: en
+title: P2PU Costa Rica
+description: P2PU learning circle 
+language: es
