--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "assets-webpack-plugin": "^3.9.10",
     "mini-css-extract-plugin": "^0.6.0",
     "promise-polyfill": "^8.1.0",
+    "react-telephone-input": "^4.73.4",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.1",
     "whatwg-fetch": "^3.0.0"
