--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -7,6 +7,6 @@ topnav:
   title: Facilitar
 
 org:
-    url: https://hog.warts/
+    url: https://www.edify.cr/
     logo_url: /assets/img/team-logo.png
 
